--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -276,3 +276,39 @@
 .headertitlenew{
     color: $default;
 }
+
+
+/* Main page */
+.mobile-center-content{
+    width: 100% !important;
+    padding-bottom: 50px;
+}
+
+.wid-50{
+    width: 50px !important;
+}
+
+.mobile-search-tab{
+    display: flex;
+    align-items: center;
+    li{
+        width: 100%;
+        padding: 0;
+    }
+}
+
+.full-banner{
+    width: 100% !important;
+}
+
+.mob-topbar{
+    padding: 0px 15px !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .topbar-left{
+        .lefttext{
+            float: left;
+        }
+    }
+}
