--- a/assets/sass/2-basics/_body-elements.sass
+++ b/assets/sass/2-basics/_body-elements.sass
@@ -39,6 +39,10 @@ p
 	font-weight: normal
 	font-size: $font-r
 	
+@media (max-width: 767px)
+	h1
+		font-size: $font-xl
+
 .form-control
 	font-family: $font-default
 	font-weight: normal
