--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14759,6 +14759,7 @@ input:checked + .slider:before {
   float: left;
   padding-top: 50px;
   background: url(../img/mobile-home.jpg) no-repeat center left;
+  background-size: cover;
 }
 .main-home .home-footer {
   width: 100%;
@@ -14811,7 +14812,7 @@ input:checked + .slider:before {
 .footercont {
   width: 100%;
   height: 30px;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   left: 0px;
 }
