--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -207,6 +207,7 @@
     float: left;
     padding-top: 50px;
     background: url(../img/mobile-home.jpg) no-repeat center left;
+    background-size: cover;
     .home-footer{
         width: 100%;
         height: 40px;
@@ -259,7 +260,7 @@
 .footercont{
     width: 100%;
     height: 30px;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 0px;
 }
