modal update for sid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6426,6 +6426,10 @@ button.close {
   outline: 0;
 }
 
+.modal-sm .modal-content {
+  background: transparent;
+}
+
 .modal-backdrop {
   position: fixed;
   top: 0;
