--- a/assets/sass/1-tools/bootstrap-source/bootstrap/_modals.scss
+++ b/assets/sass/1-tools/bootstrap-source/bootstrap/_modals.scss
@@ -60,6 +60,10 @@
   outline: 0;
 }
 
+.modal-sm .modal-content{
+  background: transparent;
+}
+
 // Modal background
 .modal-backdrop {
   position: fixed;
