--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -136,6 +136,7 @@ $font-xxxl:							28px
 $font-xxll:							30px
 $font-large:                        34px
 $font-price:                        26px
+$font-mob-price:                    24px
 $font-home:                         42px
 $font-home-subtitle:                36px
 
