--- a/assets/sass/2-basics/_body-elements.sass
+++ b/assets/sass/2-basics/_body-elements.sass
@@ -42,6 +42,21 @@ p
 @media (max-width: 767px)
 	h1
 		font-size: $font-xl
+	h2
+		font-size: $font-ml
+	h3
+		font-size: $font-m
+	h4
+		font-size: $font-r
+	h5
+		font-size: $font-s
+	h6
+		font-size: $font-s
+
+	p
+		font-family: $font-default
+		font-weight: normal
+		font-size: $font-s
 
 .form-control
 	font-family: $font-default
