--- a/assets/sass/3-component/_mobile-head.scss
+++ b/assets/sass/3-component/_mobile-head.scss
@@ -121,3 +121,11 @@
         }
     }
 }   
+
+
+// mobile sidemenu
+.sidebar-modal{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+}
