--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -43,6 +43,10 @@
 
 
 /* Custom col */
+@media (max-width: 768px)
+    .center-content
+        width: 100%
+        padding-bottom: 40px
 @media (min-width: 1200px)
     .custom-col
         width: calc(100% / 3)
