--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -219,7 +219,7 @@ a
 
 @media (max-width: 768px)
   .flex-center, .inline-flex-center, .flex-center-space, .flex-center-right, .flex-center-space-around
-    display: block
+    display: inline-flex
 
 .orange-gradient
   background: rgb(255, 161, 92) !important
