--- a/assets/sass/3-component/_topbar.scss
+++ b/assets/sass/3-component/_topbar.scss
@@ -71,6 +71,9 @@
     .topbar{
         height: auto;
     }
+    .topbar-left{
+        display: inline-flex !important;
+    }
 }
 
 .calendar-span{
