--- a/assets/sass/3-component/_mobile-head.scss
+++ b/assets/sass/3-component/_mobile-head.scss
@@ -84,6 +84,7 @@
     display: flex;
     align-items: center;
     @extend .upload-gradient;
+    z-index: 99999;
     ul{
         width: 100%;
         height: 100%;
